# JaxPM_raytrace

./: .gitignore  pyproject.toml
env/: environment.yml
jaxpm/: kdk.py
jaxpm_raytrace/: __init__.py  growth.py  kernels.py  lensing.py  painting.py  pm.py  ray_tracing_postborn.py
scripts/: demo_fast.py  demo_jaxpm_ray.py  validate_ray_kdk.py
