[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxpm_raytrace"
version = "0.0.1"
description = "JAX ray tracing for particle-mesh simulations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "JaxPM raytrace developers" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxpm_raytrace*"]
